objects/Portal_Contact_Request__c.object
<CustomObject>
    <description>Users submit requests for the creation of a Portal Contact and a Portal User record.</description>
    <fields>
        <fullName>Accel_VGT_Live_Date__c</fullName>
        <formula>DBA_Name_Direct_Relationship__r.Accel_VGT_Live_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accel VGT Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>Text(DBA_Name_Direct_Relationship__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Account_10_RM__c</fullName>
        <label>Additional Account 10 RM</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Account_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Account 10</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Account Type must be Accel, Temp Closure, or Other.</errorMessage>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Other, Accel Account, Temp Closure</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Portal Contact Requests (Additional Account 10)</relationshipLabel>
        <relationshipName>Portal_Contact_Requests5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Account_6_RM__c</fullName>
        <formula>Additional_Account_6__r.Relationship_Manager__r.FirstName +&quot; &quot;+ Additional_Account_6__r.Relationship_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Account 6 RM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Account_6__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Account 6</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Account Type must be Accel, Temp Closure, or Other.</errorMessage>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Other, Accel Account, Temp Closure</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Portal Contact Requests (Additional Account 6)</relationshipLabel>
        <relationshipName>Portal_Contact_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Account_7_RM__c</fullName>
        <label>Additional Account 7 RM</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Account_7__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Account 7</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Account Type must be Accel, Temp Closure, or Other.</errorMessage>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Other, Accel Account, Temp Closure</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Portal Contact Requests (Additional Account 7)</relationshipLabel>
        <relationshipName>Portal_Contact_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alias__c</fullName>
        <formula>LEFT( First_Name__c , 1) + LEFT( Last_Name__c , 4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Action__c</fullName>
        <description>The only users who should have Editing rights to this field are users who own the process for PCR. Changes to field initiates automation that results in the creation of a Contact record and a Community User record.</description>
        <label>Approval Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <label>Approved By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBA_Name_Direct_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to Account</description>
        <inlineHelpText>Which one is the primary related account?</inlineHelpText>
        <label>DBA Name (Direct Relationship)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Portal Contact Requests</relationshipLabel>
        <relationshipName>Portal_Contact_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Does_Key_Gaming_Decision_Maker_Approve__c</fullName>
        <description>validated/required if Is Contact Key Gaming Decision Maker? field is No</description>
        <inlineHelpText>Does gaming decision maker approve this contact having access to their location(s) portal data?</inlineHelpText>
        <label>Does Key Gaming Decision Maker Approve?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>used to populate the first name of the contact that will be created from the PCR record</description>
        <label>First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>First_Name__c &amp;&quot; &quot;&amp; Last_Name__c &amp;&quot; Portal&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Contact_Key_Gaming_Decision_Maker__c</fullName>
        <description>required at page layout</description>
        <inlineHelpText>Is this contact on the gaming application and/or liquor license, or are they a Mail Merge Recipient?</inlineHelpText>
        <label>Is Contact Key Gaming Decision Maker?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>will be used to populate the last name of the contact that will be created from the PCR record upon approval</description>
        <label>Last Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Support_Ticketing_System__c</fullName>
        <defaultValue>&quot;PortalSupport@accelentertainment.com&quot;</defaultValue>
        <description>This fields holds the email address that is used to notify Portal Support/Salesforce team (currently monday.com) via the email alert when the record is created. Not on any page layouts or reports</description>
        <label>Portal Support Ticketing System</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Proposed_Meeting_Date__c</fullName>
        <label>Proposed Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_for_Rejection__c</fullName>
        <description>Population of this field is enforced via a validation rule based on Approval Action = Rejected</description>
        <label>Reason for Rejection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Manager__c</fullName>
        <formula>DBA_Name_Direct_Relationship__r.Regional_Manager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected_By__c</fullName>
        <label>Rejected By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Account_1_RM__c</fullName>
        <formula>Related_Account_1__r.Relationship_Manager__r.FirstName +&quot; &quot;+ Related_Account_1__r.Relationship_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Account 1 RM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Account_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Account 1</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Account Type must be Accel, Temp Closure, or Other.</errorMessage>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Other, Accel Account, Temp Closure</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Portal Contact Requests (Related Account 1)</relationshipLabel>
        <relationshipName>PCR_Related_Account_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Account_2_RM__c</fullName>
        <formula>Related_Account_2__r.Relationship_Manager__r.FirstName +&quot; &quot;+ Related_Account_2__r.Relationship_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Account 2 RM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Account_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Account 2</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Account Type must be Accel, Temp Closure, or Other.</errorMessage>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Other, Accel Account, Temp Closure</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Portal Contact Requests (Related Account 2)</relationshipLabel>
        <relationshipName>PCR_Related_Account_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Account_3_RM__c</fullName>
        <formula>Related_Account_3__r.Relationship_Manager__r.FirstName +&quot; &quot;+ Related_Account_3__r.Relationship_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Account 3 RM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Account_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Account 3</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Account Type must be Accel, Temp Closure, or Other.</errorMessage>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Other, Accel Account, Temp Closure</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Portal Contact Requests (Related Account 3)</relationshipLabel>
        <relationshipName>PCR_Related_Account_3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Manager__c</fullName>
        <formula>DBA_Name_Direct_Relationship__r.Relationship_Manager__r.FirstName +&quot; &quot;+ DBA_Name_Direct_Relationship__r.Relationship_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship Manager</label>
        <type>Text</type>
    </fields>
    <label>Portal Contact Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Full_Name__c</columns>
        <columns>Approval_Action__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Approved_PCRs</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Full_Name__c</columns>
        <columns>DBA_Name_Direct_Relationship__c</columns>
        <columns>Relationship_Manager__c</columns>
        <columns>Regional_Manager__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Action__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Approved PCRs</label>
    </listViews>
    <listViews>
        <fullName>My_PCRs</fullName>
        <columns>NAME</columns>
        <columns>Full_Name__c</columns>
        <columns>Approval_Action__c</columns>
        <columns>Proposed_Meeting_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My PCRs</label>
    </listViews>
    <listViews>
        <fullName>Need_Action</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Full_Name__c</columns>
        <columns>DBA_Name_Direct_Relationship__c</columns>
        <columns>Relationship_Manager__c</columns>
        <columns>Regional_Manager__c</columns>
        <columns>Approval_Action__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Action__c</field>
            <operation>equals</operation>
        </filters>
        <label>Need Action</label>
    </listViews>
    <listViews>
        <fullName>Rejected_PCRs</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Action__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>Rejected PCRs</label>
    </listViews>
    <nameField>
        <displayFormat>PCR-{0}</displayFormat>
        <label>Portal Contact Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portal Contact Requests</pluralLabel>
    <recordTypes>
        <fullName>Standard_Portal_Contact_Request_Record_Type</fullName>
        <active>true</active>
        <description>Created in case record types are needed in the future.</description>
        <label>Standard Portal Contact Request Record Type</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Cannot_Edit_After_Approval_Action</fullName>
        <active>true</active>
        <description>Editing of the record is not allowed after a a value has been chosen for Approval Action.</description>
        <errorConditionFormula>AND(
NOT(ISNEW()),
NOT(ISBLANK( TEXT(Approval_Action__c) )),
NOT(ISBLANK(PRIORVALUE(Approval_Action__c)))
)</errorConditionFormula>
        <errorMessage>This request can no longer be edited because a decision was made.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Does_Key_Gaming_Decision_Maker_Approve</fullName>
        <active>true</active>
        <description>If the contact is not a key gaming decision maker, user needs to answer &quot;Does Key Gaming Decision Maker Approve?&quot;</description>
        <errorConditionFormula>AND(
 ISPICKVAL( Is_Contact_Key_Gaming_Decision_Maker__c , &quot;No&quot;) ,

 ISBLANK(TEXT( Does_Key_Gaming_Decision_Maker_Approve__c) ) 

)</errorConditionFormula>
        <errorDisplayField>Does_Key_Gaming_Decision_Maker_Approve__c</errorDisplayField>
        <errorMessage>Please, enter a value for &quot;Does Key Gaming Decision Maker Approve?&quot; field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_for_Rejection_is_required</fullName>
        <active>true</active>
        <description>Reason for Rejection is required when the Approval Action = Rejected</description>
        <errorConditionFormula>AND(ISPICKVAL( Approval_Action__c , &quot;Rejected&quot;),ISBLANK( Reason_for_Rejection__c ) )</errorConditionFormula>
        <errorDisplayField>Reason_for_Rejection__c</errorDisplayField>
        <errorMessage>Please enter a reason for the rejection of this PCR.</errorMessage>
    </validationRules>
</CustomObject>